--- a/css/style.css
+++ b/css/style.css
@@ -73,22 +73,11 @@ html {
         color: #1a1a1a;
         text-align: center;
       }
-      .head {
+      
+      /*.side {
           display: grid;
-          place-items: center;
-      }
-      .mn {
-          display: grid;
-          place-items: center;
-      }
-      .foot {
-          display: grid;
-          place-items: left;
-      }
-      .side {
-          display: grid;
-          place-items: center;
-      }
+          place-items: center; */
+      
 #description{
     display: none;
 }
@@ -119,7 +108,9 @@ html {
           "header side"
           "footer content";
          }
-        
+        header{
+          padding-top: 50%;
+        }
         footer {
             padding-top: 10%;
             display: flex;
@@ -128,7 +119,7 @@ html {
         }
          aside{
              padding-left: 10%;
-             display: flex;
+             display: grid;
              justify-content: left;
              text-align: left;
          }
@@ -147,10 +138,20 @@ html {
          #picname {
              display: none;
          }
-         #description {
+        #description {
             border-left: rgb(39, 168, 39) solid;
             padding-left: 5%;
+            padding-top: 3%;
             display: grid;
+            justify-content: center;
             font-size: 1.8rem;
       }
+        #icon1 {
+          right: 50%;
+          position: relative;
+        }
+        #icon2 {
+          left: 50%;
+          position: relative;
+        }
     }
